# Design_Patterns

./: CMakeLists.txt  Principles.md  Readme.md  main.cpp
Behavioral/Observer/: Publisher.h  Readme.md  Subject&Observer.h  Subscriber.h
Behavioral/Strategy/: Navigator.h  Readme.md  RouteStrategy.h
Creational/: Singleton.h
Creational/Singleton/: Readme.md  Singleton.h  Singleton.md
Structural/Decorator/: Notifier.h  Readme.md
